[Fix] rolltemplate css Whitespace

--- a/Naheulbeuk/Naheulbeuk.css
+++ b/Naheulbeuk/Naheulbeuk.css
@@ -871,6 +871,7 @@ div.sheet-reparation-impossible {
 		text-align:left!important;
 		font-weight:normal!important;
 		background: white!important;
+		white-space:normal!important;
 	}
 
 /* night mode */
